Adding in fields
Updated Trajectory Field to contain integer and added offmapBSMFiltering as a Boolean.

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -55,6 +55,7 @@ This is an html file that contains the presentation for:
           {{ renderfield(form.logging)}}
           {{ renderfield(form.systemPerformanceTimeInterval)}}
           {{ renderfield(form.peerDataDecoding)}}
+          {{ renderfield(form.offmapBsmFiltering)}}
 
         </div>
 
