Update Logging and Console Ouput
Changed Logging to Boolean type
Added new key Console Output as Boolean.

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -53,6 +53,7 @@ This is an html file that contains the presentation for:
           <div role="tabpanel" class="tab-pane fade in active" id="system">
           {{ renderfield(form.applicationPlatform)}}
           {{ renderfield(form.logging)}}
+          {{ renderfield(form.consoleOutput)}}
           {{ renderfield(form.systemPerformanceTimeInterval)}}
           {{ renderfield(form.peerDataDecoding)}}
           {{ renderfield(form.offmapBsmFiltering)}}
