updated performance data

--- a/src/system-interface/templates/base.html
+++ b/src/system-interface/templates/base.html
@@ -12,6 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">MMITSS System Interface</a>
         </div>
@@ -19,6 +20,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/local_console">Local Console</a></li>
                 <li><a href="/configuration">Configuration</a></li>
+                <li><a href="/performance_data">Performance Data</a></li>
             </ul>
         </div>
     </div>
