Performance Data revised

--- a/src/system-interface/templates/performance_data.html
+++ b/src/system-interface/templates/performance_data.html
@@ -33,7 +33,7 @@
 </style>
 <div class="header">
         <h1>Performance Data: {{platform}}</h1><br>
-        Last refreshed: {{time}} seconds<hr>
+        Last refreshed : {{time}}  <hr>
 </div>
 <div><b>Messages Transmitted</b>
     {{tables1 | safe}}</div>
