--- a/src/system-interface/templates/index.html
+++ b/src/system-interface/templates/index.html
@@ -28,7 +28,7 @@ This is the html file that contains the presentation for:
   </div>
     <div class="page-content">
         <div>
-            <img src="static/images/mmitss_logo.png" alt'"MMITSS Logo" class="rounded float-right" >
+            <img src="static/images/mmitss_logo.PNG" alt="MMITSS Logo" class="rounded float-right" >
         </div>
     </div>
 
