fixed moving divs

--- a/src/system-interface/templates/performance_data.html
+++ b/src/system-interface/templates/performance_data.html
@@ -10,10 +10,7 @@
         height:200px;
         width: auto;
         overflow-y: scroll;
-        float:right;
-        position:fixed;
-        margin-left: 35%;
-        margin-top:-20%;
+        float:right; 
         background-color: #E0FFFF;
         border: 2px solid black;
     }
@@ -67,8 +64,11 @@ img {
 
                 <div role="tabpanel" class="tab-pane fade" id="diagrams">
 
+
+                    <table><tr><td>
                         <img src="../nojournal/bin/performance-measurement-diagrams/time-phase-diagram/{{diagrams[0]}}" alt="not showing currently" width="600" height="500" id="picture">
-                        <br>
+                    </td>
+                    <td>                  
                         
                         
                 
@@ -82,7 +82,10 @@ img {
 
                         </ul>
                         
-                    </div><br>
+                    </div>
+                    </td></tr></table>
+                
+
 
                 </div>
             </div>
