--- a/src/system-interface/templates/performance_data.html
+++ b/src/system-interface/templates/performance_data.html
@@ -3,7 +3,9 @@
 
 {% block content %}
 
-
+<script src="https://unpkg.com/htmx.org@1.6.0" integrity="sha384-G4dtlRlMBrk5fEiRXDsLjriPo8Qk5ZeHVVxS8KhX6D7I9XXJlNqbdvRlp9/glk5D" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <style>
     .diagram_list{
 
@@ -88,7 +90,37 @@ img {
                 <li><a href="#diagrams" aria-controls="diagram" role="tab" data-toggle="tab">Time Phase Diagrams</a></li>
             </ul>
             <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade in active" id="tables">
+                <div role="tabpanel" class="tab-pane fade in active">
+
+                <div id=tables>
+                <div class="header">
+                        <h1>Performance Data: {{platform}}</h1><br>
+                        Last refreshed : {{time}}  <hr>
+                </div>
+                <div><b>Messages Transmitted</b>
+                    {{tables1 | safe}}</div>
+                <br>
+                <br>
+                <div><b>Messages Received</b>
+                    {{tables2 | safe}}
+                    <br><br>
+                </div>
+                </div>
+
+                
+                
+                <script>
+                $(document).ready(function(){
+                    setInterval(function(){
+                        $("#tables").load(" #tables > *");
+                        console.log("reload...") ;
+                    }, 30000);
+                    });
+                </script>
+
+
+
+
 
                 </div>
 
@@ -107,7 +139,7 @@ img {
                         <ul class = "a">
 
                             {% for diagram in diagrams %}
-                            <li id="imgList" onclick="changeDiagram( '{{ diagrams[loop.index -1] }}','{{loop.index}}')">{{diagram}}</li>
+                            <li id="imgList" onclick="changeDiagram( '{{ diagrams[loop.index -1] }}' )">{{diagram}}</li>
                             {% endfor %}
 
                         </ul>
@@ -125,8 +157,8 @@ img {
     </form>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+
 
 <script type="text/javascript">
 
@@ -134,13 +166,14 @@ img {
 $(document).ready(function(){
 setInterval(function(){
     $("#diagrams").load(" #diagrams > *");
+    console.log("reloading...") ;
 }, 30000);
 });
 
-function changeDiagram(Img, Ind){
+function changeDiagram(Img){
     
     console.log(Img);
-    var newImg = '../nojournal/bin/performance-measurement-diagrams/time-phase-diagram/' + Img ;
+    var newImg = '../nojournal/bin/performance-measurement-diagrams/time-phase-diagram' + Img ;
     document.getElementById("picture").src = newImg;
 
 }
@@ -155,5 +188,5 @@ function changeDiagram(Img, Ind){
 
 
 
-
+{% endblock %}
 
