Change JSON key Time Phase Diagram

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -54,7 +54,7 @@ This is an html file that contains the presentation for:
           {{ renderfield(form.applicationPlatform)}}
           {{ renderfield(form.logging)}}
           {{ renderfield(form.consoleOutput)}}
-          {{ renderfield(form.performanceMeasurementDiagram)}}
+          {{ renderfield(form.timePhaseDiagram)}}
           {{ renderfield(form.systemPerformanceTimeInterval)}}
           {{ renderfield(form.peerDataDecoding)}}
           {{ renderfield(form.offmapBsmFiltering)}}
